fixed issue with burger overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ body {
   box-sizing: border-box;
   background-color: #e7ecef;
   background: fixed;
+  overflow-x: hidden;
 
   a {
     text-decoration: none;
