--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -47,7 +47,7 @@
     right: 15px;
     height: 40px;
     top: 20vw;
-    transform: translateX(130%);
+    transform: translateY(-300%);
     // opacity: 0;
     transition: transform 0.5s ease;
 
@@ -70,7 +70,7 @@
     }
   }
   .burger-active {
-    transform: translateX(0%);
+    transform: translateY(0%);
   }
   @keyframes navLinkFade {
     from {
@@ -91,7 +91,6 @@
   .toggle .lineThree {
     transform: rotate(45deg) translate(-5px, -6px);
   }
-  overflow-x: hidden;
 }
 
 @include medium {
